force-app/main/default/objects/VG_Payment_Frequency__c/VG_Payment_Frequency__c.object-meta.xml
<CustomObject>
    <label>Payment Frequency</label>
    <nameField>
        <label>Payment Frequency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Frequencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>