force-app/main/default/objects/VG_Payment_Frequency__c/fields/Is_Payment_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Payment Generated</label>
    <type>Checkbox</type>
</CustomField>