force-app/main/default/objects/VG_Payment_Frequency__c/fields/VG_Broker__c.field-meta.xml
<CustomField>
    <fullName>VG_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an approved broker or sub-broker.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Broker, Sub-Broker</value>
        </filterItems>
        <filterItems>
            <field>Account.VG_TOBA_Uploaded__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.Regulatory_Check__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Frequencies</relationshipLabel>
    <relationshipName>Payment_Frequencies</relationshipName>
    <type>Lookup</type>
</CustomField>