force-app/main/default/objects/VG_Payment_Frequency__c/fields/VG_Comment__c.field-meta.xml
<CustomField>
    <fullName>VG_Comment__c</fullName>
    <label>Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>