force-app/main/default/objects/VG_Payment_Frequency__c/fields/VG_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>