force-app/main/default/objects/VG_Payment_Frequency__c/fields/VG_GWP_This_Time__c.field-meta.xml
<CustomField>
    <fullName>VG_GWP_This_Time__c</fullName>
    <label>GWP This Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>