force-app/main/default/objects/VG_Payment_Frequency__c/fields/VG_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>VG_Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>