force-app/main/default/objects/VG_Payment_Frequency__c/fields/VG_Is_Temp_Delete__c.field-meta.xml
<CustomField>
    <fullName>VG_Is_Temp_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Temp Delete</label>
    <type>Checkbox</type>
</CustomField>