force-app/main/default/objects/VG_Payment_Frequency__c/fields/VG_Outstanding_taxes__c.field-meta.xml
<CustomField>
    <fullName>VG_Outstanding_taxes__c</fullName>
    <label>Outstanding taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>