force-app/main/default/objects/VG_Payment_Frequency__c/fields/VG_Payment_Percent__c.field-meta.xml
<CustomField>
    <fullName>VG_Payment_Percent__c</fullName>
    <label>Payment (%)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>