force-app/main/default/objects/VG_Payment_Frequency__c/fields/VG_Policy_Schedule__c.field-meta.xml
<CustomField>
    <fullName>VG_Policy_Schedule__c</fullName>
    <label>Policy Schedule</label>
    <referenceTo>Policy_Schedule__c</referenceTo>
    <relationshipLabel>Payment Frequencies</relationshipLabel>
    <relationshipName>Payment_Frequencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>